[tool.black]
line-length = 100
target-version = ['py37']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.venv
  )/
)
'''

[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist = True
envlist = py37

[testenv]
whitelist_externals = poetry
skip_install = true
commands =
    poetry install -vvv
    poetry run pytest -vvsx --cov=belvo --cov-report=term-missing:skip-covered --no-cov-on-fail
"""

[tool.poetry]
name = "belvo"
version = "0.1.0"
description = "The Python SDK for Belvo"
authors = ["Aristóbulo Meneses <aristobulo@belvo.co>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
isort = "^4.3"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
responses = "^0.10.6"
tox = "^3.13"
pytest-cov = "^2.7"
pytest-responses = "^0.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

