[metadata]
name = belvo-python
description = Bank Connectivity Simplified (Belvo Python SDK)
author = Belvo Finance, S.L.
author_email = hello@belvo.co
url = https://github.com/belvo-finance/belvo-python
download_url = https://github.com/belvo-finance/belvo-python/tarball/master
keywords = api, belvo, sdk, finances
classifiers =
    Development Status :: 3 - Alpha
	Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = find:
include_package_data = True
zip_safe = False

[options.packages.find]
exclude = tests

[bdist_wheel]
universal = 1

[check-manifest]
ignore =
    .travis.yml
    .tox
    tests*
    PKG-INFO
    *.egg-info
    *.egg-info/*
    setup.cfg
    .gitignore

[tool:isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 100
known_first_party = belvo
default_section=THIRDPARTY

[tool:flake8]
exclude = .tox,*.egg,build,data
select = E,W,F

[tox:tox]
envlist =
    py{35,36,37},
    linting

[testenv]
whitelist_externals = make
setenv =
    PYTHONPATH = {toxinidir}
    PYTHONWARNINGS = once
deps =
    -rrequirements/testing.txt
commands =
    check-manifest -u -v
    python setup.py check -m -r -s
    make test

[testenv:linting]
commands = make linting
deps =
	-rrequirements/linting.txt

[travis]
python =
    3.6: py36, linting

[coverage:run]
source = belvo


[coverage:report]
show_missing = True
skip_covered = True
omit =
    */commands/*

[tool:pytest]
addopts = --cov=belvo --cov-config=setup.cfg --cov-report=term-missing:skip-covered --no-cov-on-fail  -vvsx
